# oss-maintainer-compass

./: CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
src/: __init__.py
src/oss_maintainer_compass/: __init__.py  analyzer.py  main.py  models.py  reporter.py
tests/: __init__.py  test_analyzer.py  test_models.py  test_reporter.py
